@@ -392,12 +392,12 @@ begin
   if event <> 'REQUEST' then
   begin
 
-    if CheckForBadAssGroup(rls) then
+    if CheckIfGlobalSkippedGroup(rls) then
     begin
-      MyDebug('<c4>[SKIPPED GROUP]</c> detected!: ' + rls);
-      Debug(dpSpam, rsections, 'Skipped group detected!: ' + rls);
+      MyDebug('<c4>[GLOBAL SKIPPED GROUP]</c> detected!: ' + rls);
+      Debug(dpSpam, rsections, 'Global skipped group detected!: ' + rls);
       if not precatcher_debug then
-        irc_addadmin('<b><c14>Info</c></b>: Skipped group detected!: ' + rls);
+        irc_addadmin('<b><c14>Info</c></b>: Global skipped group detected!: ' + rls);
       skiprlses.Add(rls);
       exit;
     end;
